--- a/src/main/resources/templates/fragments/dashboard-table.html
+++ b/src/main/resources/templates/fragments/dashboard-table.html
@@ -29,15 +29,26 @@
             <td th:text="${item.prezzo}">0.00</td>
             <td th:text="${item.indirizzo}">Indirizzo</td>
             <td>
-                <a th:each="cert : ${item.certificati}"
-                   th:href="@{'/file/certificati/' + ${cert}}"
-                   target="_blank" th:text="${cert}">Certificato</a>
+                <span th:if="${#strings.isEmpty(item.certificatiCsv)}">-</span>
+                <span th:if="${!#strings.isEmpty(item.certificatiCsv)}"
+                      th:each="cert : ${#strings.arraySplit(item.certificatiCsv, ',')}">
+        <a th:href="@{'/file/certificati/' + ${cert}}"
+           th:text="${cert}" target="_blank"></a><br/>
+    </span>
             </td>
+
             <td>
-                <a th:each="foto : ${item.foto}"
-                   th:href="@{'/file/foto/' + ${foto}}"
-                   target="_blank" th:text="${foto}">Foto</a>
+                <span th:if="${#strings.isEmpty(item.fotoCsv)}">-</span>
+                <span th:if="${!#strings.isEmpty(item.fotoCsv)}"
+                      th:each="foto : ${#strings.arraySplit(item.fotoCsv, ',')}">
+        <a th:href="@{'/file/foto/' + ${foto}}" target="_blank">
+            <img th:src="@{'/file/foto/' + ${foto}}" alt="Foto" style="max-height:40px;"/>
+        </a>
+    </span>
             </td>
+
+
+
             <td th:if="${itemType == 'pacchetto'}">
                 <ul>
                     <li th:each="nome : ${item.prodottiNomi}" th:text="${nome}"></li>
