--- a/src/main/resources/templates/fragments/marketplace-table.html
+++ b/src/main/resources/templates/fragments/marketplace-table.html
@@ -36,17 +36,22 @@
                 <td th:text="${p.quantita}"></td>
                 <td><input type="number" class="quantita-input" name="quantitaProdotto" min="1" max="999"/></td>
                 <td>
-                    <span th:each="f, iter : ${p.foto}" th:if="${f != null}">
-                        <a th:href="@{'/file/foto/' + ${f}}" th:text="${f}"></a>
-                        <span th:if="${!iter.last}"> · </span>
+                    <span th:if="${#strings.isEmpty(p.certificatiCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(p.certificatiCsv)}"
+                          th:each="cert : ${#strings.arraySplit(p.certificatiCsv, ',')}">
+                        <a th:href="@{'/file/certificati/' + ${cert}}" th:text="${cert}" target="_blank"></a><br/>
                     </span>
                 </td>
                 <td>
-                    <span th:each="c, iter : ${p.certificati}" th:if="${c != null}">
-                        <a th:href="@{'/file/certificati/' + ${c}}" th:text="${c}"></a>
-                        <span th:if="${!iter.last}"> · </span>
+                    <span th:if="${#strings.isEmpty(p.fotoCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(p.fotoCsv)}"
+                          th:each="foto : ${#strings.arraySplit(p.fotoCsv, ',')}">
+                        <a th:href="@{'/file/foto/' + ${foto}}" target="_blank">
+                            <img th:src="@{'/file/foto/' + ${foto}}" alt="Foto" style="max-height:40px;"/>
+                        </a>
                     </span>
                 </td>
+
                 <td th:text="${p.prezzo}"></td>
                 <td></td>
                 <td></td>
@@ -65,24 +70,33 @@
                 <td th:text="${pac.creatoDa}"></td>
                 <td th:text="${pac.quantita}"></td>
                 <td><input type="number" class="quantita-input" name="quantitaPacchetto" min="1" max="999"/></td>
+
+                <!-- FOTO -->
                 <td>
-                    <span th:each="f, iter : ${pac.foto}" th:if="${f != null}">
-                        <a th:href="@{'/file/foto/' + ${f}}" th:text="${f}"></a>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+                    <span th:if="${#strings.isEmpty(pac.fotoCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(pac.fotoCsv)}"
+                          th:each="foto : ${#strings.arraySplit(pac.fotoCsv, ',')}">
+            <a th:href="@{'/file/foto/' + ${foto}}" target="_blank">
+                <img th:src="@{'/file/foto/' + ${foto}}" alt="Foto" style="max-height:40px;"/>
+            </a>
+        </span>
                 </td>
+
+                <!-- CERTIFICATI -->
                 <td>
-                    <span th:each="c, iter : ${pac.certificati}" th:if="${c != null}">
-                        <a th:href="@{'/file/certificati/' + ${c}}" th:text="${c}"></a>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+                    <span th:if="${#strings.isEmpty(pac.certificatiCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(pac.certificatiCsv)}"
+                          th:each="cert : ${#strings.arraySplit(pac.certificatiCsv, ',')}">
+            <a th:href="@{'/file/certificati/' + ${cert}}" th:text="${cert}" target="_blank"></a><br/>
+        </span>
                 </td>
+
                 <td th:text="${pac.prezzo}"></td>
                 <td>
-                    <span th:each="nome, iter : ${pac.prodottiNomi}">
-                        <span th:text="${nome}"></span>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+        <span th:each="nome, iter : ${pac.prodottiNomi}">
+            <span th:text="${nome}"></span>
+            <span th:if="${!iter.last}"> · </span>
+        </span>
                 </td>
                 <td></td>
                 <td th:text="${pac.indirizzo}"></td>
@@ -100,30 +114,40 @@
                 <td th:text="${t.creatoDa}"></td>
                 <td th:text="${t.quantita}"></td>
                 <td><input type="number" class="quantita-input" name="quantitaTrasformato" min="1" max="999"/></td>
+
+                <!-- FOTO -->
                 <td>
-                    <span th:each="f, iter : ${t.foto}" th:if="${f != null}">
-                        <a th:href="@{'/file/foto/' + ${f}}" th:text="${f}"></a>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+                    <span th:if="${#strings.isEmpty(t.fotoCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(t.fotoCsv)}"
+                          th:each="foto : ${#strings.arraySplit(t.fotoCsv, ',')}">
+            <a th:href="@{'/file/foto/' + ${foto}}" target="_blank">
+                <img th:src="@{'/file/foto/' + ${foto}}" alt="Foto" style="max-height:40px;"/>
+            </a>
+        </span>
                 </td>
+
+                <!-- CERTIFICATI -->
                 <td>
-                    <span th:each="c, iter : ${t.certificati}" th:if="${c != null}">
-                        <a th:href="@{'/file/certificati/' + ${c}}" th:text="${c}"></a>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+                    <span th:if="${#strings.isEmpty(t.certificatiCsv)}">-</span>
+                    <span th:if="${!#strings.isEmpty(t.certificatiCsv)}"
+                          th:each="cert : ${#strings.arraySplit(t.certificatiCsv, ',')}">
+            <a th:href="@{'/file/certificati/' + ${cert}}" th:text="${cert}" target="_blank"></a><br/>
+        </span>
                 </td>
+
                 <td th:text="${t.prezzo}"></td>
                 <td></td>
                 <td>
-                    <span th:each="fase, iter : ${t.fasiProduzione}">
-                        <span th:text="${fase.descrizioneFase} + ' (prod: ' + ${fase.produttoreUsername} + ')'"></span>
-                        <span th:if="${!iter.last}"> · </span>
-                    </span>
+        <span th:each="fase, iter : ${t.fasiProduzione}">
+            <span th:text="${fase.descrizioneFase} + ' (prod: ' + ${fase.produttoreUsername} + ')'"></span>
+            <span th:if="${!iter.last}"> · </span>
+        </span>
                 </td>
                 <td th:text="${t.indirizzo}"></td>
                 <td></td>
                 <td class="action-cell"></td>
             </tr>
+
 
             </tbody>
         </table>
